<resources>
    <string name="app_name">App Profiler</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_lst_populator">MenuLstPopulator</string>
    <string name="title_activity_data_sniffer">DataSniffer</string>
    <string name="title_activity_application_list_data_sniff">ApplicationListDataSniff</string>
    <string name="title_activity_application_list">ApplicationList</string>
    <string name="title_activity_apk_info">ApkInfo</string>
    <string name="btn_task">Tasks</string>
    <string name="btn_service">Services</string>
    <string name="btn_system">System</string>
    <string name="operation">Operation</string>
    <string name="menu_switch">Switch To</string>
    <string name="menu_kill">Kill it!</string>
    <string name="menu_detail">See Detail</string>
    <string name="menu_uninstall">Uninstall</string>
    <string name="cancel">Cancel</string>
    <string name="memory_unknown">Unknown</string>
    <string name="message_switch_fail">Can\'t switch to this task, because it has no interface.</string>
    <string name="message_no_market">Can\'t start Market, please check your phone.</string>

    <string name="appicon">Application Icon</string>
    <string name="apkname">Application Name:</string>
    <string name="package_name">Package Name:</string>
    <string name="version">Version:</string>
    <string name="req_version">Taget SDK Version:</string>
    <string name="path_info">Path Info:</string>
    <string name="appsize">Physical Size</string>
    <string name="installed">Installed:</string>
    <string name="title_activity_apk_list">ApkListActivity</string>
    <string name="title_activity_server_loc">Map</string>
    <string name="anim_time">100</string>
	<string name="notify_read">App Profiler is reading values</string>
	<string name="notify_read2">Reading values in the background</string>
	<string name="notify_record">App Profiler is recording values</string>
	<string name="notify_record2">Recording values in the background</string>
	<string name="notify_toast_saved">saved in the folder \'App Profiler\'.</string>
	<string name="notify_toast_error">An error happened when saving the CSV file:</string>
	<string name="notify_toast_error_2">It hasn\'t been possible to start recording:</string>
    <string name="w_main_choose_process">Choose other process(es)</string>
    <string name="w_main_processes">Processes</string>
    <string name="w_main_memory">Memory</string>
    <string name="w_main_hide">Hide</string>
    <string name="w_main_remove_all">Remove All</string>
    <string name="w_main_feedback_title">Just one second ;)</string>
    <string name="w_main_feedback_text">You\'ve been using App Profiler for a while.</string>
    <string name="w_main_feedback_yes">Yes</string>
    <string name="w_main_feedback_done">I\'ve already done it</string>
    <string name="w_main_feedback_done_thanks">Thanks for your rate!</string>
    <string name="w_main_feedback_no">No</string>
    <string name="w_main_feedback_no_remind">You\'ll be reminded in three months.</string>
    <string name="w_main_welcome">Welcome!</string>
    <string name="w_main_hint_title">FYI</string>
    <string name="w_main_hint">Enable and disable parameters shown on the graph by pressing its label.
        \n\nYou can open the Settings panel by clicking the graph.</string>
    <string name="w_main_mp_button_text">Alright</string>
    <string name="w_processes_dead">DEAD</string>
    <string name="w_processes_dead_notification">Process dead</string>
    <string name="w_processes_title">Processes</string>
    <string name="w_processes_empty">Ouch! There was some problem when retrieving the system processes.</string>
    <string name="w_processes_android_51_problem"><big><b>Ouch!</b></big>
		\n\nFor Android 5.1.1+ the processes list doesn\'t work anymore.
		It\'s due to an undocumented Android API change. Still trying to find out some workaround.
		\n\nMore info: http://stackoverflow.com/questions/30619349/android-5-1-1-and-above-getrunningappprocesses-returns-my-application-packag</string>
    <string name="w_processes_first_time">You can remove a process from the list by performing a long click on its label.</string>
	<string name="w_processes_select_some_process">Please select some process(es).</string>

	<string name="menu_record">Record</string>
	<string name="menu_record_description">Starts recording memory and CPU parameters in the background</string>
	<string name="menu_record_stop_description">Stops recording and saves CSV file</string>
	<string name="menu_stop_record">Stop and save</string>
	<string name="menu_settings_description">Opens Settings panel</string>
	<string name="menu_help">Help</string>
	<string name="menu_about">About</string>
	<string name="menu_close">Close</string>
	<string name="button_ok">OK</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_reset">Reset to Defaults</string>
	<string name="graphic_update_interval">Update interval</string>
	<string name="graphic_paused">Graph paused</string>
	<string name="graphic_recording">Recording&#8230;</string>
	<string name="interval_read">Read interval:</string>
	<string name="interval_update">Update interval:</string>
	<string name="interval_width">Graph interval width:</string>
	<string name="tab_main">Main</string>
	<string name="tab_main_text">Set the frequency which memory and CPU parameters are read, the frequency the graph and labels are updated and the graph interval width.
	    \n\nThe update interval must be equal or higher than the read interval. If the read interval is modified the graph will be reset.</string> <!--  The higher values, the less resources consumed. -->
	<string name="tab_main_alert_text">The update interval must be equal or higher than the	read interval. Change these intervals or press \'Reset to Defaults\'.</string>
	<string name="tab_main_alert_ok">OK</string>
	<string name="tab_show">Show/Record</string>
	<string name="tab_show_text">Select the parameters you want to be shown on the graph.
	    These parameters will be the same that will be recorded when the recording mode is on.
	    \n\nThe generated CSV files are saved on the \'data/data/org.App Profiler/files\' folder.
	    \n\nYou can also check/uncheck these parameters stright from the main window by pushing on the name of the parameters.</string>
	<string name="tab_show_select_all">Select All</string>
	<string name="tab_show_unselect_all">Unselect All</string>
	<string name="read_interval_text">Read parameters every:</string>
	<string name="read_interval_prompt">Read interval (s):</string>
	<string-array name="read_interval_array">
		<item>0.5 s</item>
		<item>1 s</item>
		<item>2 s</item>
		<item>4 s</item>
	</string-array>
	<string name="update_interval_text">Update labels and graph every:</string>
	<string name="update_interval_prompt">Update interval (s):</string>
	<string-array name="update_interval_array">
		<item>1 s</item>
		<item>2 s</item>
		<item>4 s</item>
		<item>8 s</item>
	</string-array>
	<string name="width_interval_text">Graph interval width:</string>
	<string name="width_interval_prompt">Width interval (dp):</string>
	<string-array name="width_interval_array">
		<item>1 dp</item>
		<item>2 dp</item>
		<item>5 dp</item>
		<item>10 dp</item>
	</string-array>
	<string name="p_cpuusage">CPU Usage</string>
	<string name="p_cputotalusage">Total CPU usage</string>
	<string name="p_memtotal">Memory</string>
	<string name="p_memused">Mem used</string>
	<string name="p_memavailable">Mem available</string>
	<string name="p_memfree">MemFree</string>
	<string name="p_cached">Cached</string>
	<string name="p_threshold">Threshold</string>
	<string name="p_kb">- kB</string>
	<string name="start_test">Start Test</string>
	<string name="p_percentage">-%</string>
	<string name="about_title">About</string>
    <string name="cd_paramter_status_icon">Parameter status icon</string>
    <string name="content_description_logo_app">Logo app</string>
    <string name="title_activity_task_manager">TaskManager</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_per">PerActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_retrive">ActivityRetrive</string>
    <string name="title_activity_battery_consumption">BatteryConsumption</string>
    <string name="title_activity_ipextractsdata">IPExtractsdata</string>
    <string name="title_activity_ipextract_data">IPExtractData</string>

	<string name="title_activity_save">SaveActivity</string>
	<string name="title_activity_process_list">ProcessListActivity</string>
	<string name="stop_test">Stop Test</string>
	<string name="process_free_mem">App/Available Memory:</string>
	<string name="process_overall_cpu">App/System CPU:</string>
	<string name="traffic">Net Traffic(KB)</string>
	<string name="stat_error">Stat Error</string>
	<string name="current">Current</string>
	<string name="title_activity_notification_receiver">NotificationReceiver</string>

</resources>